--- a/template/backend/role/edit.html
+++ b/template/backend/role/edit.html
@@ -15,7 +15,7 @@
 		<div class="layui-form-item">
 			<label class="layui-form-label">角色名</label>
 			<div class="layui-input-block">
-				<input type="text" name="role_name" value="{{.RoleInfo.RoleName}}" lay-verify="required">
+				<input type="text" name="role_name" value="{{.RoleInfo.RoleName}}" class="layui-input" lay-verify="required">
 			</div>
 		</div>
 
