--- a/template/backend/member/add.html
+++ b/template/backend/member/add.html
@@ -20,6 +20,17 @@
 		</div>
 
 		<div class="layui-form-item">
+			<label class="layui-form-label">角色</label>
+			<div class="layui-input-block">
+				<select name="role_id" lay-verify="required">
+					{{range $k,$v := .Roles}}
+					<option value="{{$v.ID}}">{{$v.RoleName}}</option>
+					{{end}}
+				</select>
+			</div>
+		</div>
+
+		<div class="layui-form-item">
 			<label class="layui-form-label">邮箱</label>
 			<div class="layui-input-block">
 				<input type="email" name="email" value="" placeholder="请输入邮箱" autocomplete="off" class="layui-input" lay-verify="required">
