--- a/template/backend/permission/add.html
+++ b/template/backend/permission/add.html
@@ -39,7 +39,7 @@
 			<div class="layui-input-block">
 				<select name="type">
 					<option value="0">普通菜单</option>
-					<option value="1">外部链接</option>
+					<option value="1">链接地址</option>
 				</select>
 			</div>
 		</div>
