--- a/template/backend/permission/edit.html
+++ b/template/backend/permission/edit.html
@@ -43,7 +43,7 @@
 			{{$t := .MenuInfo.Type}}
 				<select name="type">
 					<option value="0" {{if eq $t 0}} selected="selected"{{end}}>普通菜单</option>
-					<option value="1" {{if eq $t 1}} selected="selected"{{end}}>外部链接</option>
+					<option value="1" {{if eq $t 1}} selected="selected"{{end}}>链接地址</option>
 				</select>
 			</div>
 		</div>
