--- a/template/frontend/index/index.html
+++ b/template/frontend/index/index.html
@@ -1,4 +1,5 @@
-﻿<!doctype html>
+﻿{{define "frontend/index/index.html"}}
+<!doctype html>
 <html lang="zh-CN">
 <head>
     <meta charset="utf-8">
@@ -8,24 +9,8 @@
     <title>木庄网络博客-MZ-NetBlog主题模板</title>
     <meta name="keywords" content="">
     <meta name="description" content="">
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="css/nprogress.css">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
-    <link rel="apple-touch-icon-precomposed" href="images/icon.png">
-    <link rel="shortcut icon" href="images/favicon.ico">
-    <script src="js/jquery-2.1.4.min.js"></script>
-    <script src="js/nprogress.js"></script>
-    <script src="js/jquery.lazyload.min.js"></script>
-    <!--[if gte IE 9]>
-      <script src="js/jquery-1.11.1.min.js" type="text/javascript"></script>
-      <script src="js/html5shiv.min.js" type="text/javascript"></script>
-      <script src="js/respond.min.js" type="text/javascript"></script>
-      <script src="js/selectivizr-min.js" type="text/javascript"></script>
-    <![endif]-->
-    <!--[if lt IE 9]>
-      <script>window.location.href='upgrade-browser.html';</script>
-    <![endif]-->
+
+    {{template "frontend/public/header.html"}}
 </head>
 <body class="user-select">
     <header class="header">
@@ -73,6 +58,8 @@
             </div>
         </nav>
     </header>
+
+
     <section class="container">
         <div class="content-wrap">
             <div class="content">
@@ -392,14 +379,9 @@
             </div>
         </aside>
     </section>
-    <footer class="footer">
-        <div class="container">
-            <p>本站[<a href="http://www.muzhuangnet.com/">木庄网络博客</a>]的部分内容来源于网络，若侵犯到您的利益，请联系站长删除！谢谢！Powered By [<a href="http://www.dtcms.net/" target="_blank" rel="nofollow">DTcms</a>] Version 4.0 &nbsp;<a href="http://www.miitbeian.gov.cn/" target="_blank" rel="nofollow">闽ICP备00000000号-1</a> &nbsp; <a href="http://www.muzhuangnet.com/sitemap.xml" target="_blank" class="sitemap">网站地图</a></p>
-        </div>
-        <div id="gotop"><a class="gotop"></a></div>
-    </footer>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/jquery.ias.js"></script>
-    <script src="js/scripts.js"></script>
+
+    {{template "frontend/public/footer.html"}}
+
 </body>
 </html>
+{{end}}
