--- a/template/base/404/404.html
+++ b/template/base/404/404.html
@@ -1,4 +1,5 @@
-﻿<!doctype html>
+﻿{{define "base/404/404.html"}}
+<!doctype html>
 <html lang="zh-CN">
 <head>
     <meta charset="utf-8">
@@ -149,3 +150,4 @@
     <script src="js/scripts.js"></script>
 </body>
 </html>
+{{end}}
