--- a/template/base/404/404.html
+++ b/template/base/404/404.html
@@ -1,76 +1,25 @@
-﻿{{define "base/404/404.html"}}
-<!doctype html>
-<html lang="zh-CN">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="renderer" content="webkit">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>404错误！很抱歉，您要找的页面不存在</title>
-    {{template "frontend/public/header.html"}}
-    <style type="text/css">
-        .panel {
-            padding: 80px 20px 0px;
-            min-height: 400px;
-            cursor: default;
-        }
-
-        .text-center {
-            margin: 0 auto;
+    <meta charset="UTF-8">
+    <title>404</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_693759_ly2l5vm2fxn.css">
+    <style>
+        .box {
             text-align: center;
-            border-radius: 10px;
-            max-width: 900px;
-            -moz-box-shadow: 0px 0px 5px rgba(0,0,0,.3);
-            -webkit-box-shadow: 0px 0px 5px rgba(0,0,0,.3);
-            box-shadow: 0px 0px 5px rgba(0,0,0,.1);
+            font-size: 14px;
         }
 
-        .float-left {
-            float: left !important;
-        }
-
-        .float-right {
-            float: right !important;
-        }
-
-        img {
-            border: 0;
-            vertical-align: bottom;
-        }
-
-        h2 {
-            padding-top: 20px;
-            font-size: 20px;
-        }
-
-        .padding-big {
-            padding: 20px;
-        }
-
-        .alert {
-            border-radius: 5px;
-            padding: 15px;
-            border: solid 1px #ddd;
-            background-color: #f5f5f5;
+        .box .iconfont {
+            font-size: 300px;
         }
     </style>
 </head>
-<body class="user-select">
-
-    <section class="container">
-
-            <div class="text-center" style="background: #ffffff;margin: 80px auto;">
-                <h2><stong>404错误！很抱歉，您要找的页面不存在</stong></h2>
-                <div class="padding-big">
-                    <a href="/" class="btn btn-primary">返回首页</a>
-                </div>
-            </div>
-
-    </section>
-
-    <script src="/static/frontend/js/bootstrap.min.js"></script>
-    <script src="/static/frontend/js/jquery.ias.js"></script>
-    <script src="/static/frontend/js/scripts.js"></script>
+<body>
+<div class="box">
+    <i class="iconfont icon-404cuowu"></i>
+    <p>小哥哥小姐姐，页面找不到了！</p>
+</div>
 </body>
 </html>
-{{end}}
