--- a/template/backend/member/add.html
+++ b/template/backend/member/add.html
@@ -10,7 +10,7 @@
 <body>
 <div class="ok-body">
 	<!--form表单-->
-	<form class="layui-form layui-form-pane ok-form" action="/backend/member/user-add-post" method="post" enctype="multipart/form-data">
+	<form class="layui-form layui-form-pane ok-form" action="/backend/member/user-add-post.shun" method="post" enctype="multipart/form-data">
 
 		<div class="layui-form-item">
 			<label class="layui-form-label">用户名</label>
