--- a/template/backend/role/edit.html
+++ b/template/backend/role/edit.html
@@ -10,7 +10,7 @@
 <body>
 <div class="ok-body">
 	<!--form表单-->
-	<form class="layui-form layui-form-pane ok-form" action="/backend/auth-role/role-edit-post" method="post" enctype="multipart/form-data">
+	<form class="layui-form layui-form-pane ok-form" action="/backend/auth-role/role-edit-post.shun" method="post" enctype="multipart/form-data">
 
 		<div class="layui-form-item">
 			<label class="layui-form-label">角色名</label>
@@ -53,7 +53,7 @@
 
 		var id = $("input[name=id]").val();
 		$.ajax({
-			url:"/backend/auth-role/role-auth",
+			url:"/backend/auth-role/role-auth.shun",
 			data: {id:id},
 			dataType:"json",
 			type:"get",
