--- a/template/backend/index/index.html
+++ b/template/backend/index/index.html
@@ -119,7 +119,7 @@
 
          <div id="tabContent" class="layui-tab-content ok-tab-content">
             <div class="layui-tab-item layui-show">
-               <iframe src='/backend/welcome' frameborder="0" scrolling="yes" width="100%"
+               <iframe src='/backend/welcome.shun' frameborder="0" scrolling="yes" width="100%"
                        height="100%"></iframe>
             </div>
          </div>
