加入错误页面

--- a/template/backend/index/index.html
+++ b/template/backend/index/index.html
@@ -71,7 +71,7 @@
    <!--左侧导航区域-->
    <div class="layui-side layui-side-menu okadmin-bg-20222A ok-left">
       <div class="layui-side-scroll okadmin-side">
-         <div class="okadmin-logo">ok-admin v2.0</div>
+         <div class="okadmin-logo">zadmin</div>
          <div class="user-photo">
             <a class="img" title="我的头像">
                <img src="/static/backend/images/avatar.png" class="userAvatar">
