--- a/template/backend/category/index.html
+++ b/template/backend/category/index.html
@@ -1,9 +1,9 @@
-{{define "backend/member/index.html"}}
+{{define "backend/category/index.html"}}
 <!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>会员管理</title>
+	<title>分类管理</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	{{template "backend/public/header.html"}}
 </head>
@@ -12,8 +12,8 @@
 <div class="ok-nav">
 	  <span class="layui-breadcrumb">
 		<a href="#">首页</a>
-		<a href="#">会员管理</a>
-		  <a><cite>用户列表</cite></a>
+		<a href="#">分类管理</a>
+		  <a><cite>分类列表</cite></a>
 	  </span>
 </div>
 
@@ -22,7 +22,7 @@
 	<!--数据表格-->
 	<div class="layui-row">
 
-		<form class="layui-form ok-search-form" action="/backend/member/user-list" method="get">
+		<form class="layui-form ok-search-form" action="/backend/category/category-list.shun" method="get">
 			<div class="layui-form-item">
 				<div class="layui-inline">
 					<label class="layui-form-label">账号</label>
@@ -54,7 +54,7 @@
 		</form>
 
 		<div class="layui-card-header">
-			<a class="layui-btn layui-btn-sm" onclick="layui.okLayer.open('添加用户', '/backend/member/user-add', '90%', '90%')">添加用户</a>
+			<a class="layui-btn layui-btn-sm" onclick="layui.okLayer.open('添加分类', '/backend/category/category-add.shun', '90%', '90%')">添加分类</a>
 		</div>
 
 		<form action="" id="tableForm">
@@ -63,11 +63,11 @@
 				<thead>
 					<tr>
 						<th lay-data="{field:'id'}">ID</th>
-						<th lay-data="{field:'username'}">用户名</th>
-						<th lay-data="{field:'rname'}">昵称</th>
-						<th lay-data="{field:'email'}">邮箱</th>
+						<th lay-data="{field:'name'}">分类名称</th>
+						<th lay-data="{field:'pid'}">上级分类</th>
+						<th lay-data="{field:'remark'}">分类描述</th>
 						<th lay-data="{field:'ctime'}">创建时间</th>
-						<th lay-data="{field:'ltime'}">登陆时间</th>
+						<th lay-data="{field:'utime'}">编辑时间</th>
 						<th lay-data="{field:'manage'}">操作</th>
 					</tr>
 				</thead>
@@ -75,18 +75,18 @@
 					{{range $k,$v := .list}}
 					<tr>
 						<td>{{$v.ID}}</td>
-						<td>{{$v.Username}}</td>
-						<td>{{$v.Rname}}</td>
-						<td>{{$v.Email}}</td>
+						<td>{{$v.Name}}</td>
+						<td>{{$v.Pname}}</td>
+						<td>{{$v.Remark}}</td>
 						<td>{{UnixToDateTime $v.Ctime}}</td>
-						<td>{{UnixToDateTime $v.Ltime}}</td>
+						<td>{{UnixToDateTime $v.Utime}}</td>
 						<td>
-							<a title="编辑"  onclick="layui.okLayer.open('编辑用户', '/backend/member/user-edit/{{$v.ID}}', '90%', '90%')" href="javascript:;" style="color: #2D8CF0">
+							<a title="编辑"  onclick="layui.okLayer.open('编辑分类', '/backend/category/category-edit/{{$v.ID}}.shun', '90%', '90%')" href="javascript:;" style="color: #2D8CF0">
 								编辑
 							</a>&nbsp;&nbsp;
 
 							{{if ne $v.ID 1}}
-							<a title="删除" onclick="delete_column({{$v.ID}},'/backend/member/user-delete')" href="javascript:;" style="color: #2D8CF0">
+							<a title="删除" onclick="delete_column({{$v.ID}},'/backend/category/category-delete.shun')" href="javascript:;" style="color: #2D8CF0">
 								删除
 							</a>
 							{{end}}
