--- a/template/backend/article/add.html
+++ b/template/backend/article/add.html
@@ -22,12 +22,19 @@
 					<div class="layui-form-item">
 						<label class="layui-form-label">文章名</label>
 						<div class="layui-input-block">
-							<input type="text" name="name" value="" placeholder="请输入文章名" autocomplete="off" class="layui-input" lay-verify="required">
+							<input type="text" name="title" value="" placeholder="请输入文章名" autocomplete="off" class="layui-input" lay-verify="required">
 						</div>
 					</div>
 
 					<div class="layui-form-item">
-						<label class="layui-form-label">上级文章</label>
+						<label class="layui-form-label">副标题</label>
+						<div class="layui-input-block">
+							<input type="text" name="short_title" value="" placeholder="副标题" autocomplete="off" class="layui-input">
+						</div>
+					</div>
+
+					<div class="layui-form-item">
+						<label class="layui-form-label">文章分类</label>
 						<div class="layui-input-block">
 							<select name="pid" lay-verify="required">
 								<option value="0">请选择</option>
@@ -35,20 +42,6 @@
 								<option value="{{$v.ID}}">{{$v.Name}}</option>
 								{{end}}
 							</select>
-						</div>
-					</div>
-
-					<div class="layui-form-item">
-						<label class="layui-form-label">文章目录</label>
-						<div class="layui-input-block">
-							<input type="text" name="ename" value="" placeholder="请输入文章目录(英文、数字、下划线组合)" autocomplete="off" class="layui-input" lay-verify="required">
-						</div>
-					</div>
-
-					<div class="layui-form-item">
-						<label class="layui-form-label">图标</label>
-						<div class="layui-input-block">
-							<input type="text" name="icon" value="" placeholder="请输入图标" autocomplete="off" class="layui-input">
 						</div>
 					</div>
 
@@ -76,11 +69,23 @@
 					</div>
 
 					<div class="layui-form-item layui-form-text">
-						<label class="layui-form-label">备注</label>
+						<label class="layui-form-label">描述</label>
 						<div class="layui-input-block">
-							<textarea name="remark" placeholder="请输入内容" class="layui-textarea"></textarea>
+							<textarea name="remark" placeholder="请输入描述" class="layui-textarea"></textarea>
 						</div>
 					</div>
+
+					<div class="layui-form-item layui-form-text">
+						<label class="layui-form-label">内容</label>
+						<div class="layui-input-block">
+							<div id="editor">
+
+							</div>
+							<textarea name="content" id="text1" class="layui-textarea layui-hide"></textarea>
+						</div>
+					</div>
+
+
 				</div>
 				<div class="layui-tab-item">
 					<div class="layui-form-item">
@@ -105,8 +110,6 @@
 			</div>
 		</div>
 
-
-
 		<div class="layui-form-item">
 			<div class="layui-input-block">
 				<button class="layui-btn" lay-submit lay-filter="save">立即提交</button>
@@ -115,6 +118,8 @@
 		</div>
 	</form>
 </div>
+<!--引入编辑器-->
+
 <!--js逻辑-->
 {{template "backend/public/footer.html"}}
 </body>
