--- a/template/backend/public/header.html
+++ b/template/backend/public/header.html
@@ -1,4 +1,5 @@
 {{define "backend/public/header.html"}}
+    <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
     <link rel="stylesheet" href="/static/backend/css/oksub.css">
     <script type="text/javascript" src="/static/backend/lib/loading/okLoading.js"></script>
     <script src="/static/backend/lib/layui/layui.js"></script>
